--- a/templates/each_blog.html
+++ b/templates/each_blog.html
@@ -1,9 +1,9 @@
 {%extends 'base.html'%}
 {%block content%}
 
-<h2>{{new_title}}</h2>
 <a name='{{id}}'></a>
-<p>{{new_post}}</p>
+<h3>{{entry.title}}</h3>
+<p>{{entry.text}}</p>
 
 
 
